--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@voximplant/react-native-foreground-service": "^2.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-location": "^2.5.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0"
