--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@voximplant/react-native-foreground-service": "^2.0.0",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-geolocation-service": "^5.3.0-beta.1",
