--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,11 +132,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.zipidriver"
+        applicationId "com.zipidrivers"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.6"
     }
     splits {
         abi {
@@ -147,6 +147,14 @@ android {
         }
     }
     signingConfigs {
+              release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+    }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -161,7 +169,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+                signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
